--- a/index.html
+++ b/index.html
@@ -4,37 +4,28 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AdEA — La voz del futuro no tiene rostro</title>
+    <title>AdEA — Promoción literaria anónima para escritores</title>
     <meta name="description"
-        content="Asociación de Escritores Ɐnónimos: promoción literaria cooperativa, anónima y profesional para autores independientes.">
+        content="AdEA es la primera asociación que promueve obras, no nombres. Campañas en Meta Ads, Telegram e Instagram. Sin permanencia. 75% de tu aporte va directo a publicidad.">
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+
+    <!-- Preconexión a fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600;700&family=Inter:wght@300;400;500&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css" />
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'GTM-WJJXN3SD');</script>
-    <!-- Meta Pixel Code -->
-    <script>
-        !function (f, b, e, v, n, t, s) {
-            if (f.fbq) return; n = f.fbq = function () {
-                n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            };
-            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
-            n.queue = []; t = b.createElement(e); t.async = !0;
-            t.src = v; s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s)
-        }(window, document, 'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '870092382345285');
-        fbq('track', 'PageView');
-    </script>
+
+    <!-- Meta Pixel -->
+    <script>!function (f, b, e, v, n, t, s) { if (f.fbq) return; n = f.fbq = function () { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) }; if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = []; t = b.createElement(e); t.async = !0; t.src = v; s = b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s) }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '870092382345285'); fbq('track', 'PageView');</script>
     <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=870092382345285&ev=PageView&noscript=1" /></noscript>
-    <!-- End Meta Pixel Code -->
-
 </head>
 
 <body>
@@ -49,6 +40,13 @@
             </a>
             <p class="tagline">La voz del futuro no tiene rostro.</p>
         </div>
+        <!-- Dentro del .container del header, junto al logo -->
+        <button id="theme-toggle" aria-label="Cambiar tema" class="theme-toggle">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2">
+                <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+            </svg>
+        </button>
     </header>
 
     <section class="hero">
@@ -76,64 +74,137 @@
 
             <div class="services-grid">
                 <div class="service-card">
-                    <h3>Entrevistas anónimas</h3>
+                    <h3>Entrevistas Ɐnónimas</h3>
                     <p>Compartimos tu proceso creativo sin revelar tu identidad. Solo tu voz y tu historia.</p>
                 </div>
                 <div class="service-card">
-                    <h3>Promoción en Telegram</h3>
-                    <p>Tu obra llega a miles de lectores a través de nuestro canal y cuenta oficial.</p>
+                    <h3>Promoción Ɐnónima</h3>
+                    <p>Tu obra será publicada a través de nuestro canal de Telegram, Instagram y Facebook sin decir el
+                        nombre de esta ni el tuyo propio. Únicamente con la sinopsis y link directo a la compra.</p>
                 </div>
                 <div class="service-card">
                     <h3>Campañas colectivas</h3>
                     <p>Meta Ads segmentadas por género literario, con presupuesto compartido y equitativo.</p>
                 </div>
-                <div class="service-card">
-                    <h3>Estadísticas mensuales</h3>
-                    <p>Acceso privado a informes detallados: alcance, engagement, clics y evolución de tu visibilidad.
-                    </p>
-                </div>
             </div>
 
+
+        </div>
+    </section>
+
+    <!-- PLANES -->
+    <section class="pricing" id="planes">
+        <div class="container">
+            <h2>Planes de membresía</h2>
+            <p class="section-intro">Todos los planes incluyen: entrevista anónima, promoción en Telegram y Meta
+                (Threads, Instagram y Facebook), estadísticas mensuales y campañas colectivas en Meta Ads. La única
+                diferencia es la inversión
+                mensual en publicidad. El 15% se destina a gestión de la página web, comisiones y demás, el 75% a la
+                promoción directa y el restante a los diseños y la gestión de la publicidad. </p>
+
+            <!-- Selector de ciclo -->
+            <div class="pricing-toggle">
+                <button id="toggle-monthly" class="toggle-btn active" data-cycle="monthly">Mensual</button>
+                <button id="toggle-annual" class="toggle-btn" data-cycle="annual">Anual (1 mes gratis)</button>
+            </div>
+
+            <!-- Grid de planes -->
+            <div class="pricing-grid" id="pricing-grid">
+                <!-- Los planes se generarán con JS -->
+            </div>
+
+            <!-- Plan Personalizado -->
+            <div class="custom-plan">
+                <h3>¿Necesitas un plan a medida?</h3>
+                <p>Para editoriales, colecciones o proyectos especiales.</p><br>
+                <a href="https://t.me/adea_oficial" class="btn btn-secondary">Hablemos de tu obra</a>
+            </div>
             <div class="subscription-details">
                 <p>Tras el pago, recibirás un enlace para completar un formulario confidencial con los datos de tu obra.
-                    Tu aporte se destina en un 85% a campañas publicitarias reales; el resto cubre diseño, gestión y
-                    análisis.</p>
-                <p>Gracias a la inversión colectiva, optimizamos audiencias por género literario y logramos un impacto
-                    mayor que el de una promoción individual.</p>
+                    Gracias a la inversión colectiva, optimizamos audiencias por género literario y logramos un impacto
+                    mayor que el de una promoción individual.</p><br>
+                <div class="transparency-chart">
+                    <h3>Distribución de tu aporte</h3>
+                    <div class="chart-row">
+                        <span class="chart-label">Promoción directa (Meta Ads)</span>
+                        <span class="chart-bar"><span
+                                style="width: 75%; background-color: var(--accent);"></span></span>
+                        <span class="chart-value">75%</span>
+                    </div>
+                    <div class="chart-row">
+                        <span class="chart-label">Diseño y gestión de campañas</span>
+                        <span class="chart-bar"><span style="width: 10%; background-color: #5a4a38;"></span></span>
+                        <span class="chart-value">10%</span>
+                    </div>
+                    <div class="chart-row">
+                        <span class="chart-label">Mantenimiento web y comisiones</span>
+                        <span class="chart-bar"><span style="width: 15%; background-color: #3a2f20;"></span></span>
+                        <span class="chart-value">15%</span>
+                    </div>
+                </div>
             </div>
-
-            <a href="#faq" class="btn btn-secondary">Preguntas frecuentes</a>
+            <!-- Próximos pasos -->
+            <div class="next-steps">
+                <h3>¿Qué ocurre después de suscribirte?</h3>
+                <div class="steps-grid">
+                    <div class="step-item">
+                        <div class="step-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+                            </svg>
+                        </div>
+                        <div class="step-text">
+                            <h4>Recibes el formulario confidencial</h4>
+                            <p>Tras el pago, te enviaremos un enlace seguro para compartir los datos de tu obra (sin
+                                revelar tu identidad).</p>
+                        </div>
+                    </div>
+                    <div class="step-item">
+                        <div class="step-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                                <polyline points="22 4 12 14.01 9 11.01"></polyline>
+                            </svg>
+                        </div>
+                        <div class="step-text">
+                            <h4>Tu obra se publica en 48h</h4>
+                            <p>Preparamos las piezas gráficas y lanzamos la promoción en Telegram, Instagram y campañas
+                                de Meta Ads.</p>
+                        </div>
+                    </div>
+                    <div class="step-item">
+                        <div class="step-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2">
+                                <line x1="18" y1="20" x2="18" y2="10"></line>
+                                <line x1="12" y1="20" x2="12" y2="4"></line>
+                                <line x1="6" y1="20" x2="6" y2="14"></line>
+                            </svg>
+                        </div>
+                        <div class="step-text">
+                            <h4>Recibes tu informe mensual</h4>
+                            <p>Al finalizar cada ciclo, te enviamos un análisis detallado de alcance, clics, engagement
+                                y evolución.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
-
-    <section class="faq" id="faq">
+    <section class="trust-badges">
         <div class="container">
-            <h2>Preguntas frecuentes</h2>
-            <div class="faq-list">
-                <div class="faq-item">
-                    <h3>¿Puedo incluir más de una obra?</h3>
-                    <p>Sí. Cada suscripción permite hasta tres obras activas. Gestionamos su rotación según género y
-                        público objetivo.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>¿Recibo informes de desempeño?</h3>
-                    <p>Sí. Mensualmente recibirás un informe con métricas clave: alcance, clics, engagement, coste por
-                        resultado y tendencias.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>¿Hay permanencia en la membresía?</h3>
-                    <p>No. Puedes cancelar o pausar tu suscripción en cualquier momento, sin penalización.</p>
-                </div>
-                <div class="faq-item">
-                    <h3>¿Cuál es la filosofía de AdEA?</h3>
-                    <p>No buscamos viralidad, sino legado literario. Creemos en la promoción cooperativa: el éxito de
-                        uno impulsa al colectivo. Todas las piezas publicitarias siguen una identidad visual unificada y
-                        profesional.</p>
-                </div>
+            <h2>¿Por qué elegirnos?</h2>
+            <div class="badges-grid">
+                <div class="badge">Sin permanencia</div>
+                <div class="badge">Informe mensual</div>
+                <div class="badge">Datos confidenciales</div>
+                <div class="badge">Cancelación en 1 clic</div>
             </div>
         </div>
     </section>
-
     <section class="cta" id="contacto">
         <div class="container">
             <h2>¿Listo para dar voz a tu historia?</h2>
@@ -141,13 +212,31 @@
             <a href="mailto:contacto@adea-literatura.org" class="btn btn-primary">Escríbenos</a>
         </div>
     </section>
-
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 AdEA — Asociación de Escritores Ɐnónimos</p>
+            <p><a href="/aviso-legal.html" style="color:#b0a595; text-decoration:underline;">Aviso legal</a> |
+                <a href="/faq.html" style="color:#b0a595; text-decoration:underline;">Preguntas frecuentes</a>
+            </p>
             <p>La voz del futuro no tiene rostro.</p>
         </div>
     </footer>
+
+    <!-- Banner de cookies -->
+    <div id="cookie-banner" class="cookie-banner">
+        <p>Utilizamos cookies para analizar el tráfico y mejorar tu experiencia. Al continuar, aceptas su uso.</p>
+        <div class="cookie-buttons">
+            <button id="accept-cookies" class="btn btn-secondary">Aceptar</button>
+            <a href="/aviso-legal.html" class="btn btn-text">Más información</a>
+        </div>
+    </div>
+    <!-- Botón flotante de Telegram -->
+    <a href="https://t.me/adea_oficial" id="floating-telegram" aria-label="Contactar por Telegram">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+        </svg>
+    </a>
 
     <script src="script.js"></script>
 </body>
