--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script>!function (f, b, e, v, n, t, s) { if (f.fbq) return; n = f.fbq = function () { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) }; if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = []; t = b.createElement(e); t.async = !0; t.src = v; s = b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s) }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '870092382345285'); fbq('track', 'PageView');</script>
     <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=870092382345285&ev=PageView&noscript=1" /></noscript>
-    
+
 </head>
 
 <body>
@@ -41,7 +41,10 @@
             </a>
             <p class="tagline">La voz del futuro no tiene rostro.</p>
         </div>
+
         <div class="header-actions">
+            
+            <!-- Botón Área de escritor (igual que estaba) -->
             <a href="./login.html" class="writer-area-link" aria-label="Acceder al área privada de escritor">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2">
@@ -52,6 +55,8 @@
                 </svg>
                 <span>Área de escritor</span>
             </a>
+
+            <!-- Botón modo oscuro -->
             <button id="theme-toggle" aria-label="Cambiar tema" class="theme-toggle">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2">
@@ -60,6 +65,7 @@
             </button>
         </div>
     </header>
+
 
     <section class="hero">
         <div class="container">
