--- a/faq.html
+++ b/faq.html
@@ -26,7 +26,7 @@
     <script>!function (f, b, e, v, n, t, s) { if (f.fbq) return; n = f.fbq = function () { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) }; if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = []; t = b.createElement(e); t.async = !0; t.src = v; s = b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s) }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '870092382345285'); fbq('track', 'PageView');</script>
     <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=870092382345285&ev=PageView&noscript=1" /></noscript>
-    
+
 </head>
 
 <body>
@@ -37,17 +37,42 @@
     <header class="header">
         <div class="container">
             <a href="./" class="logo-link" aria-label="Ir a la página principal de AdEA">
-                <img src="logo.png" alt="AdEA - Asociación de Escritores Ɐnónimos" class="logo">
+                <img src="./logo.png" alt="AdEA - Asociación de Escritores Ɐnónimos" class="logo">
             </a>
             <p class="tagline">La voz del futuro no tiene rostro.</p>
         </div>
-        <!-- Dentro del .container del header, junto al logo -->
-        <button id="theme-toggle" aria-label="Cambiar tema" class="theme-toggle">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2">
-                <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
-            </svg>
-        </button>
+
+        <div class="header-actions">
+            <!-- Botón Área de creador de contenido -->
+            <a href="./login-influ.html" class="writer-area-link"
+                aria-label="Acceder al área de bookstagramers y booktokers">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2">
+                    <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                    <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+                </svg>
+                <span>Área de creador</span>
+            </a>
+            <!-- Botón Área de escritor (igual que estaba) -->
+            <a href="./login.html" class="writer-area-link" aria-label="Acceder al área privada de escritor">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2">
+                    <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                    <circle cx="9" cy="7" r="4"></circle>
+                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                    <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                </svg>
+                <span>Área de escritor</span>
+            </a>
+
+            <!-- Botón modo oscuro -->
+            <button id="theme-toggle" aria-label="Cambiar tema" class="theme-toggle">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2">
+                    <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+                </svg>
+            </button>
+        </div>
     </header>
     <section class="faq" id="faq">
         <div class="container">
